Update Angular Material custom theme

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,7 @@
 // ••[1]••••••••••••••••••••••••• styles.scss •••••••••••••••••••••••••••••• //
 
+/* stylelint-disable selector-no-qualifying-type */
+
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 
@@ -15,32 +17,43 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$ExercisePart3-primary: mat.define-palette(mat.$indigo-palette);
-$ExercisePart3-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$exercise-part3-primary: mat.define-palette(mat.$deep-purple-palette);
+$exercise-part3-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
-$ExercisePart3-warn: mat.define-palette(mat.$red-palette);
+$exercise-part3-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$ExercisePart3-theme: mat.define-light-theme((color: (primary: $ExercisePart3-primary,
-			accent: $ExercisePart3-accent,
-			warn: $ExercisePart3-warn,
+$exercise-part3-light-theme: mat.define-light-theme((color: (primary: $exercise-part3-primary,
+			accent: $exercise-part3-accent,
+			warn: $exercise-part3-warn,
+		)));
+
+$exercise-part3-dark-theme: mat.define-dark-theme((color: (primary: $exercise-part3-primary,
+			accent: $exercise-part3-accent,
+			warn: $exercise-part3-warn,
 		)));
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
 
-@include mat.all-component-themes($ExercisePart3-theme);
+@include mat.all-component-themes($exercise-part3-light-theme);
 
-// ••[1]••••••••••••••••••••••••• styles.scss •••••••••••••••••••••••••••••• //
 html,
 body {
 	height: 100%;
 }
 
 body {
+	background: mat.get-theme-color($exercise-part3-light-theme, background, background);
 	font-family: Roboto, "Helvetica Neue", sans-serif;
 	margin: 0;
+
+	&.dark {
+
+		@include mat.all-component-colors($exercise-part3-dark-theme);
+		background: mat.get-theme-color($exercise-part3-dark-theme, background, background);
+	}
 }
