Import our first Angular Material Component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <!-- ••[1]••••••••••••••••••••••••• app.component.html •••••••••••••••••••••••••••••• -->
 
-This is AppComponent
+<mat-toolbar>
+  <span>{{ appName }}</span>
+</mat-toolbar>
