--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,1 +1,5 @@
 // ••[1]••••••••••••••••••••••••• app.component.scss •••••••••••••••••••••••••••••• //
+.app-name {
+	display: flex;
+	flex: 1 1 auto;
+}
