Add NotFound modules, component and logic

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,11 @@
   </mat-slide-toggle>
 </mat-toolbar>
 
-<nav mat-tab-nav-bar [tabPanel]="matTabNavPanelRef">
+<nav
+  mat-tab-nav-bar
+  [tabPanel]="matTabNavPanelRef"
+  *ngIf="hideMatTabNavBar$ | async"
+>
   <a
     mat-tab-link
     *ngFor="let link of links"
