--- a/src/app/not-found/not-found/not-found.component.html
+++ b/src/app/not-found/not-found/not-found.component.html
@@ -1,3 +1,15 @@
 <!-- ••[1]••••••••••••••••••••••••• not-found.component.html •••••••••••••••••••••••••••••• -->
 
-<p>not-found works!</p>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>{{ titleLabel | uppercase }}</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <p>{{ contentLabel }}</p>
+  </mat-card-content>
+  <mat-card-actions align="end">
+    <button mat-raised-button color="accent" routerLink="/">
+      {{ actionButtonLabel }}
+    </button>
+  </mat-card-actions>
+</mat-card>
