Improve UI with MatCard on HomeComponent, AlbumListComponent and UserListComponent

--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,3 +1,10 @@
 <!-- ••[1]••••••••••••••••••••••••• home.component.html •••••••••••••••••••••••••••••• -->
 
-<p>home works!</p>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>{{ titleLabel | uppercase }}</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <p>{{ contentLabel }}</p>
+  </mat-card-content>
+</mat-card>
