--- a/src/app/album/album-list/album-list.component.html
+++ b/src/app/album/album-list/album-list.component.html
@@ -6,5 +6,13 @@
   </mat-card-header>
   <mat-card-content>
     <p>{{ contentLabel }}</p>
+
+    <mat-list>
+      <div mat-subheader>{{ listTitleLabel }}</div>
+      <mat-list-item *ngFor="let album of albums$ | async">
+        <mat-icon matListItemIcon>album</mat-icon>
+        <div matListItemTitle>{{ album.title | titlecase }}</div>
+      </mat-list-item>
+    </mat-list>
   </mat-card-content>
 </mat-card>
