Add filter functionality to UserListComponent

--- a/src/app/album/album-list/album-list.component.html
+++ b/src/app/album/album-list/album-list.component.html
@@ -8,7 +8,7 @@
     <p>{{ contentLabel }}</p>
 
     <!-- Filter -->
-    <mat-form-field class="example-form-field">
+    <mat-form-field>
       <mat-label>{{ filterLabel }}</mat-label>
       <input
         matInput
