--- a/src/app/album/album-list/album-list.component.scss
+++ b/src/app/album/album-list/album-list.component.scss
@@ -2,3 +2,11 @@
 mat-form-field {
 	width: 100%;
 }
+
+mat-spinner {
+	left: 50vw;
+	margin-left: -20px;
+	margin-top: -20px;
+	position: absolute;
+	top: 50vh;
+}
