--- a/src/app/album/album-detail/album-detail.component.html
+++ b/src/app/album/album-detail/album-detail.component.html
@@ -1,4 +1,6 @@
 <!-- ••[1]••••••••••••••••••••••••• album-detail.component.html •••••••••••••••••••••••••••••• -->
 
-<p>album-detail works!</p>
-<div>albumId: {{ albumId }}</div>
+<div>albumDetail$</div>
+<pre>
+  {{ albumDetail$ | async | json }}
+</pre>
