Extend UserDetailComponent UI to retrieve user details

--- a/src/app/user/user-detail/user-detail.component.html
+++ b/src/app/user/user-detail/user-detail.component.html
@@ -1,4 +1,6 @@
 <!-- ••[1]••••••••••••••••••••••••• user-detail.component.html •••••••••••••••••••••••••••••• -->
 
-<p>user-detail works!</p>
-<div>userId: {{ userId }}</div>
+<div>userDetail$</div>
+<pre>
+  {{ userDetail$ | async | json }}
+</pre>
