--- a/src/app/album/album-list/album-list.component.scss
+++ b/src/app/album/album-list/album-list.component.scss
@@ -1,4 +1,8 @@
 // ••[1]••••••••••••••••••••••••• album-list.component.scss •••••••••••••••••••••••••••••• //
+
+/* stylelint-disable selector-pseudo-element-no-unknown */
+
+/* stylelint-disable max-nesting-depth */
 mat-form-field {
 	width: 100%;
 }
@@ -9,4 +13,22 @@ mat-spinner {
 	margin-top: -20px;
 	position: absolute;
 	top: 50vh;
+}
+
+mat-grid-tile {
+	border: 2px solid var(--divider);
+	overflow: auto;
+	text-align: left;
+
+	/* NOTE: 'ng-deep' is considered a bad practice, however sometimes is the only
+  way to pierce into components Shadow DOM */
+
+	::ng-deep .mat-grid-tile-content {
+		display: block;
+		padding: 1em;
+
+		mat-list {
+			padding-bottom: 3em;
+		}
+	}
 }
