--- a/src/app/album/album-list/album-list.component.html
+++ b/src/app/album/album-list/album-list.component.html
@@ -1,6 +1,8 @@
 <!-- ••[1]••••••••••••••••••••••••• album-list.component.html •••••••••••••••••••••••••••••• -->
 
-<mat-card>
+<mat-card
+  *ngIf="isAtLeastMediumBreakpoint$ | async as isAtLeastMediumBreakpoint"
+>
   <mat-card-header>
     <mat-card-title>{{ titleLabel | uppercase }}</mat-card-title>
   </mat-card-header>
@@ -29,8 +31,12 @@
     <ng-container
       *ngIf="filteredAlbums$ | async as filteredAlbums; else loadingRef"
     >
-      <mat-grid-list cols="3" gutterSize="16">
-        <mat-grid-tile [colspan]="2">
+      <mat-grid-list
+        [cols]="isAtLeastMediumBreakpoint.matches ? 3 : 1"
+        gutterSize="16"
+        [rowHeight]="isAtLeastMediumBreakpoint.matches ? 600 : '3:2'"
+      >
+        <mat-grid-tile [colspan]="isAtLeastMediumBreakpoint.matches ? 2 : 1">
           <!-- List -->
           <mat-list *ngIf="filteredAlbums.length; else noAlbumsRef">
             <div mat-subheader>{{ listTitleLabel }}</div>
@@ -51,7 +57,7 @@
             <mat-card-content>{{ noAlbumsLabel }}</mat-card-content>
           </mat-card>
         </ng-template>
-        <mat-grid-tile>
+        <mat-grid-tile [colspan]="1">
           <!-- Child route outlet -->
           <router-outlet></router-outlet>
         </mat-grid-tile>
