--- a/src/app/home/home/home.component.scss
+++ b/src/app/home/home/home.component.scss
@@ -1,1 +1,13 @@
 // ••[1]••••••••••••••••••••••••• home.component.scss •••••••••••••••••••••••••••••• //
+.log-buttons {
+	align-items: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	margin-top: 2em;
+
+	button {
+		margin-bottom: 1em;
+		width: 20em;
+	}
+}
