--- a/src/app/home/home/home.component.scss
+++ b/src/app/home/home/home.component.scss
@@ -1,5 +1,6 @@
 // ••[1]••••••••••••••••••••••••• home.component.scss •••••••••••••••••••••••••••••• //
-.log-buttons {
+.log-buttons,
+.navigation-buttons {
 	align-items: center;
 	display: flex;
 	flex-direction: column;
